# unsafe-promises

./: unsafe-promises.cabal
Control/Concurrent/Promise/: Promise.hs  Unsafe.hs
