Name: unsafe-promises
Version: 0.0
Cabal-Version: >= 1.6
License: BSD3
License-File: LICENSE
Author: Adam Curtis
Maintainer: acurtis@spsu.edu
Homepage: https://github.com/kallisti-dev/unsafe-promises
Category: Concurrency
Synopsis: Create pure futures using lazy IO
Build-type: Simple
Description:
        An experimental library for creating lazy promises that can be
        evaluated in pure code. 